@@ -85,8 +85,9 @@ const std::string StateDatabase::BZDB_BOXHEIGHT         = std::string("_boxHeigh
 const std::string StateDatabase::BZDB_BURROWDEPTH       = std::string("_burrowDepth");
 const std::string StateDatabase::BZDB_BURROWSPEEDAD     = std::string("_burrowSpeedAd");
 const std::string StateDatabase::BZDB_BURROWANGULARAD   = std::string("_burrowAngularAd");
-const std::string StateDatabase::BZDB_EXPLODETIME       = std::string("_explodeTime");
+const std::string StateDatabase::BZDB_DEADUNDER         = std::string("_deadUnder");
 const std::string StateDatabase::BZDB_DISABLEBOTS       = std::string("_disableBots");
+const std::string StateDatabase::BZDB_EXPLODETIME       = std::string("_explodeTime");
 const std::string StateDatabase::BZDB_FAKELAG           = std::string("_fakeLag");
 const std::string StateDatabase::BZDB_FLAGALTITUDE      = std::string("_flagAltitude");
 const std::string StateDatabase::BZDB_FLAGHEIGHT        = std::string("_flagHeight");
